AC_INIT([EventMachine], [2.0], [someone@somewhere.com])
AM_INIT_AUTOMAKE([dist-bzip2 foreign])

AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_PROG_LIBTOOL

AC_OUTPUT([
Makefile
src/Makefile
src/lib/Makefile
tests/Makefile
])

echo
echo "${PACKAGE} ${VERSION}"
echo
echo "Now type 'make' ('gmake' on some systems) to compile ${PACKAGE}"
echo
